--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ deploy:
   github_token: "$GH_TOKEN"
   on:
     branch: master
-  repo: jsBan/blog
+  repo: jsBan/jsBan.github.io
   target_branch: gh-pages
   local_dir: dist
 env:
